--- a/feb16.html
+++ b/feb16.html
@@ -5,12 +5,14 @@
 </head>
 
 <body>
-<h1> Baltimore Deaf Moviegoers Feb & March 2016 Survey Results </h1>
 
+<h1>Baltimore Deaf Moviegoers Feb & March 2016 Survey Results</h1>
+</br>
 <iframe width="876" height="561.5" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1nGIISP-2unLOBuLzFMJ4DDz8enO7xleKNAAmRdzGaUg/pubchart?oid=284721123&amp;format=interactive"></iframe>
+</br>
+<p>Data is sourced from community responses on survey lined here: <a href=https://docs.google.com/forms/d/1KfDbZw7FvHRvNw09upvF5VKAMIXCjqgujkI54QyxYRM/viewform?c=0&w=1&fbzx=4174037160682324836>Survey</a></p>
 
+</br>
+<p>(c) 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
 </body>
-
-<p>Data is sourced from community responses on survey linked here: <a href=https://docs.google.com/forms/d/1KfDbZw7FvHRvNw09upvF5VKAMIXCjqgujkI54QyxYRM/viewform?c=0&w=1&fbzx=4174037160682324836>Survey</a></p>
-
 </html>
