--- a/feb16.html
+++ b/feb16.html
@@ -12,7 +12,7 @@
 </br>
 <iframe width="1056" height="394.7558333333334" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1nGIISP-2unLOBuLzFMJ4DDz8enO7xleKNAAmRdzGaUg/pubchart?oid=177683255&amp;format=interactive"></iframe>
 </br>
-<p>Data is sourced from community responses on survey lined here: <a href=https://docs.google.com/forms/d/1KfDbZw7FvHRvNw09upvF5VKAMIXCjqgujkI54QyxYRM/viewform?c=0&w=1&fbzx=4174037160682324836>Survey</a></p>
+<p>Data is sourced from community responses on survey linked here: <a href=https://docs.google.com/forms/d/1KfDbZw7FvHRvNw09upvF5VKAMIXCjqgujkI54QyxYRM/viewform?c=0&w=1&fbzx=4174037160682324836>Survey</a></p>
 
 </br>
 <p>(c) 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
