--- a/feb16.html
+++ b/feb16.html
@@ -2,19 +2,49 @@
 
 <head>
 	<title>Baltimore Deaf Moviegoers Feb/Mar 2016 Results</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
+	<meta name="viewport" content="width=device-width", initial-scale=1>
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<!-- CSS here -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- custom CSS -->
+	<style>
+		<body {
+			padding-top: 70px;
+			/* req. padding for navbar-fixed-top, change if using static or if height of navbar changes */
+		}
+	</style>
 </head>
 
 <body>
+<div class="container">
+	<div class="row">
+	<div class="col-lg-12 text-center">
+		<h1>Baltimore Deaf Moviegoers Feb & March 2016 Survey Results</h1>
+		</br>
+		<iframe width="876" height="561.5" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1nGIISP-2unLOBuLzFMJ4DDz8enO7xleKNAAmRdzGaUg/pubchart?oid=284721123&amp;format=interactive"></iframe>
+		</br>
+		<iframe width="1056" height="394.7558333333334" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1nGIISP-2unLOBuLzFMJ4DDz8enO7xleKNAAmRdzGaUg/pubchart?oid=177683255&amp;format=interactive"></iframe>
+		</br>
+		<p>Data is sourced from community responses on survey linked here: <a href=https://docs.google.com/forms/d/1KfDbZw7FvHRvNw09upvF5VKAMIXCjqgujkI54QyxYRM/viewform?c=0&w=1&fbzx=4174037160682324836>Survey</a></p>
 
-<h1>Baltimore Deaf Moviegoers Feb & March 2016 Survey Results</h1>
-</br>
-<iframe width="876" height="561.5" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1nGIISP-2unLOBuLzFMJ4DDz8enO7xleKNAAmRdzGaUg/pubchart?oid=284721123&amp;format=interactive"></iframe>
-</br>
-<iframe width="1056" height="394.7558333333334" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1nGIISP-2unLOBuLzFMJ4DDz8enO7xleKNAAmRdzGaUg/pubchart?oid=177683255&amp;format=interactive"></iframe>
-</br>
-<p>Data is sourced from community responses on survey linked here: <a href=https://docs.google.com/forms/d/1KfDbZw7FvHRvNw09upvF5VKAMIXCjqgujkI54QyxYRM/viewform?c=0&w=1&fbzx=4174037160682324836>Survey</a></p>
+	</div>
+	</div>
+</div>
 
-</br>
-<p>(c) 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
+<footer class="footer">
+	<div class="container"
+	::before
+		<p class="text-muted">(c) 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
+	::after
+	</div>
+</footer>
+	<script src="js/ie10-viewport-bug-workaround.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
