--- a/feb16.html
+++ b/feb16.html
@@ -37,7 +37,7 @@
 </div>
 
 <footer class="footer">
-	<div class="container"
+	<div class="container">
 		<p class="text-muted">(c) 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
 	</div>
 </footer>
