fixed error in footer formatting

--- a/feb16.html
+++ b/feb16.html
@@ -38,7 +38,7 @@
 
 <footer class="footer">
 	<div class="container">
-		<p class="text-muted">(c) 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
+		<p class="text-muted text-center">&#169; 2016 David Rancourt & Baltimore Deaf Moviegoers</p>
 	</div>
 </footer>
 	<script src="js/ie10-viewport-bug-workaround.js"></script>
